--- a/.arcconfig
+++ b/.arcconfig
@@ -1,15 +1,5 @@
 {
-  "project_id" : "hive",
-  "conduit_uri" : "https://reviews.facebook.net/",
-  "copyright_holder" : "Apache Software Foundation",
-  "phutil_libraries" : {
-    "arc_jira_lib" : ".arc_jira_lib"
-  },
-  "arcanist_configuration" : "ArcJIRAConfiguration",
-  "events.listeners" : ["CommitListener"],
-  "jira_base_url" : "https://issues.apache.org/jira/secure/",
-  "jira_api_url" : "https://issues.apache.org/jira/si/",
-  "jira_project" : "HIVE",
-  "lint_engine" : "JavaLintEngine",
-  "max_line_length" : "100"
+	"project_id": "hive",
+	"conduit_uri": "https://code.uberinternal.com/",
+	"git.default-relative-commit": "origin/cdh5.7.2-release-uber"
 }
